syntax = "proto3";

option go_package = "C:/Users/Test/GolandProjects/GoExercise/go_exercise";
package go_exercise;

// List of services exported by the server (master)
service GrepMapReduce {
  /* Splits the file and assigns each chunk to
    a different worker to process it. Then collects
    the results and returns the grep file */
  rpc Grep(File) returns (File) {}
}

// declaration of the messages used
message File {
  string file_name = 1;
  string file_content = 2;
}